# get-3gpp-spec

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml
src/: date_range.rs  ftp.rs  http.rs  main.rs  numbering.rs  parsed_file.rs  versioning.rs
