[package]
name = "get-3gpp-spec"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "default-tls"] }
suppaftp = "6.0.1"
